(style) fixed content alignment on different viewports + new br in contact section

--- a/src/style-sheets/About.module.css
+++ b/src/style-sheets/About.module.css
@@ -2,10 +2,10 @@
 
     color: #fff;
     font-size: 1.5vw;
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-content: center;
+    top: -5vh;
 }
 
 .about_container p{
@@ -28,7 +28,6 @@
    justify-content: space-around;
    min-height: 130px;
    margin-top: 50px;
-
 }
 
 .description div{
@@ -69,7 +68,6 @@
         max-width: 100%;
         justify-content: space-around;
         align-content: center;
-     
     }
      
     .description div{
@@ -77,9 +75,7 @@
         min-height: 8vh;
         width: 95%;
         margin: 1.5vh 0;
-
-    }
-    
+    } 
 }
 
 @media screen and (max-width: 450px){
@@ -105,7 +101,5 @@
         width: 95%;
         margin: 2.5vh 0;
         box-shadow: -5px 5px 0 0 #5465ff;
-
     }
-    
 }
