--- a/src/style-sheets/GlassContainer.module.css
+++ b/src/style-sheets/GlassContainer.module.css
@@ -4,26 +4,32 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-
     width: 87%;
     height: 85vh;
     min-height: 85vh;
     margin: 4vh 0;
     padding: 0 3vw;
     border-radius: 2vh;
-
     backdrop-filter: blur(2vw);
     background: rgba(255, 255, 255, 0.03);
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
     border-top: 1px solid rgba(255, 255, 255, 0.2);
     border-left: 1px solid rgba(255, 255, 255, 0.2);
-
 }
 
 .div_content{
 
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.div_content > div{
+
+    height: fit-content;
+    position: relative;
 }
 
 .glass_container h3{
@@ -45,7 +51,6 @@
     background-color: #a2dae6;
     position: relative;
     margin-bottom: 3vh;
-
 }
 
 @media screen and (max-width: 800px) {
@@ -53,8 +58,7 @@
     .glass_container h3{
 
         font-size: 4.5vw;
-    }
-    
+    } 
 }
 
 @media screen and (max-width: 450px) {
@@ -62,6 +66,5 @@
     .glass_container h3{
 
         font-size: 6vw;
-    }
-    
+    }   
 }
