--- a/src/style-sheets/Skills.module.css
+++ b/src/style-sheets/Skills.module.css
@@ -7,5 +7,5 @@
     flex-wrap: wrap;
     justify-content: center;
     align-content: flex-start;
-
+    top: -5vh;
 }
